--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press a Key to Start or Click Here</h1>
+  
   <div class="container">
     <div lass="row">
 
